<resources>
    <string name="app_name">Foodle</string>
    <string name="allergens_title">Allergens: %1$s</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="littlefield_cafe">Littlefield Cafe</string>
    <string name="jesta_pizza">Jesta\' Pizza</string>
    <string name="kins">Kins</string>
    <string name="fast_j2">Fast @ J2</string>
    <string name="j2">J2</string>
    <string name="jester_city_limits">Jester City Limits</string>
    <string name="jester_city_market">Jester City Market</string>
    <string name="cypress_bend_cafe">Cypress Bend Cafe</string>
    <string name="foodle">Foodle</string>
    <string name="open_link">Open Link</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="placeholder_date">Friday, 28 October</string>
    <string name="placeholder_dininghall_name">Jester City Limits</string>
    <string name="microwave_map">Microwave Map</string>
    <string name="redirect_text">Redirect to menu items in browser.</string>
    <string name="view_online">View Online</string>
    <string name="view_menus_online">View Menus Online</string>
    <string name="dish_name">Dish Name</string>
    <string name="food_category_placeholder">-- Chef\'s Picks --</string>
    <string name="view_nutritional_information">View Nutritional Information</string>
    <string name="title">Foodle</string>
</resources>