<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DiningHallActivity">

        <!--    <androidx.cardview.widget.CardView-->
        <!--        android:id="@+id/image_container"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginLeft="10dp"-->
        <!--        android:layout_marginTop="10dp"-->
        <!--        android:layout_marginRight="10dp"-->
        <!--        android:layout_weight="20"-->
        <!--        android:elevation="@dimen/cardview_compat_inset_shadow"-->
        <!--        app:cardCornerRadius="20dp"-->
        <!--        app:cardPreventCornerOverlap="true"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent">-->

        <!--        <ImageView-->
        <!--            android:id="@+id/food_image"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:adjustViewBounds="true"-->
        <!--            android:scaleType="centerCrop"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:srcCompat="@drawable/jcl" />-->

        <!--    </androidx.cardview.widget.CardView>-->
        <TextView
            android:id="@+id/dining_hall_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="0"
            android:text="@string/placeholder_dininghall_name"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/placeholder_date"
            android:textSize="24sp"
            android:layout_margin="10sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/dining_hall_name" />

        <RadioGroup
            android:id="@+id/meal_selection_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:checkedButton="@id/breakfast_button"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date">

            <RadioButton
                android:id="@+id/breakfast_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:contentDescription="@string/breakfast"/>

            <RadioButton
                android:id="@+id/lunch_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:contentDescription="@string/lunch"/>

            <RadioButton
                android:id="@+id/dinner_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:contentDescription="@string/dinner"/>

        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintTop_toBottomOf="@id/meal_selection_radio_group">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/foodRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                tools:listitem="@layout/dining_hall_food_item" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>

